{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 29,
  "lineage": "4a253285-b257-cc37-2446-c8563598be65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ee755be0cd7555c",
            "arn": "arn:aws:ec2:us-west-2:598010641694:instance/i-0fefacbc37308217d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fefacbc37308217d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bcc41793bea301b1",
            "private_dns": "ip-10-0-1-32.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_ip": "54.149.223.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a7edb1b81e63765b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04cb08a360ff72539",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-ec2-instance"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcc5bb3c157d0530"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598010641694:internet-gateway/igw-0f1bce2a0f0976c46",
            "id": "igw-0f1bce2a0f0976c46",
            "owner_id": "598010641694",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-igw"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-igw"
            },
            "vpc_id": "vpc-0f4182cce089568a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598010641694:route-table/rtb-0ba7e888f6d7017c2",
            "id": "rtb-0ba7e888f6d7017c2",
            "owner_id": "598010641694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1bce2a0f0976c46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-rt"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4182cce089568a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.public-igw",
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674f252b8ebdcf4f",
            "route_table_id": "rtb-0ba7e888f6d7017c2",
            "subnet_id": "subnet-04cb08a360ff72539"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.public-igw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598010641694:security-group/sg-0fcc5bb3c157d0530",
            "description": "Security group for non-prod EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcc5bb3c157d0530",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "non-prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "598010641694",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f4182cce089568a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598010641694:subnet/subnet-04cb08a360ff72539",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb08a360ff72539",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "598010641694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-subnet"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-public-subnet"
            },
            "vpc_id": "vpc-0f4182cce089568a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-non-prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-non-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:598010641694:vpc/vpc-0f4182cce089568a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a26b5800c0bfb485",
            "default_route_table_id": "rtb-0165f3379bcf89191",
            "default_security_group_id": "sg-09d1e5f3aa55016f5",
            "dhcp_options_id": "dopt-055a6491a18072258",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4182cce089568a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0165f3379bcf89191",
            "owner_id": "598010641694",
            "tags": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-vpc"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Environment": "Non-Prod",
              "Name": "non-prod-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}